# agent-odyssey

./: .gitignore  CLAUDE.md  README.md
agent-harness-kit/: DIAGRAMS.md  README.md  SPEC.md
agent-harness-kit/skills/claude/: CLAUDE.md  SKILL.md
claude-code-travel-agent/: .env.sample  .gitignore  Justfile  README.md  agent.py  config.py  main.py  pyproject.toml  test_composer.py  tui.py
claude-code-travel-agent/commands/: export_itinerary.md  model.md  profile.md  quick_weekend.md
claude-code-travel-agent/doc/: ARCHITECTURE.md  COMPOSER_IMPLEMENTATION.md
claude-code-travel-agent/dummy_data/: destinations.json  flights.json
claude-code-travel-agent/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  ollama_client.py  openai_client.py
claude-code-travel-agent/memory/: __init__.py  compressor.py  todo.py  trip_context.py  user_profile.py
claude-code-travel-agent/safety/: __init__.py  injection_filter.py
claude-code-travel-agent/skills/: business_travel.md  family_travel.md
claude-code-travel-agent/tools/: __init__.py  export_itinerary.py  llm_fallback.py  provider.py  registry.py  save_context.py  search_destinations.py  search_flights.py  search_hotels.py  update_itinerary.py  update_profile.py  view_itinerary.py
claude-code-travel-agent/tools/providers/: __init__.py  activities.py  builtin.py  online_destinations.py  weather.py
travel-agent/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
travel-agent/dummy_data/: activities.json  hotels.json
travel-agent/src/: config.ts  index.tsx
(+25 files in other folders)
